e49/pod-env-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
      validation:
        openAPIV3Schema:
          type: object
          properties:
            labels:
              type: array
              items:
                type: string
  targets:
   - target: admission.k8s.gatekeeper.sh
     rego: |
       package k8srequiredlabels

        violation[{"msg": msg, "details": {"missing_env_label": missing}}] {
          provided := {label | input.review.object.metadata.labels[label]}
          required := {"env"}
          missing := required - provided
          count(missing) > 0
          msg := sprintf("missing required labels: %v", [missing])
        }
