e49/pod-env-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-pod-env
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
